--- a/package.json
+++ b/package.json
@@ -24,10 +24,15 @@
     "react-feather": "^2.0.3",
     "react-helmet": "^5.2.1",
     "react-scrollspy": "^3.4.0",
-    "styled-components": "^4.4.0"
+    "styled-components": "^4.4.0",
+    "tailwindcss": "^1.6.2"
   },
   "devDependencies": {
-    "prettier": "^1.18.2"
+    "@emotion/core": "^10.0.34",
+    "@emotion/styled": "^10.0.27",
+    "gatsby-plugin-emotion": "^4.3.10",
+    "prettier": "^1.18.2",
+    "twin.macro": "^1.7.0"
   },
   "keywords": [
     "gatsby"
